# BrainResearch

./: .gitignore  1. MRI Pipeline.ipynb  2. Data Analysis.ipynb  3. All Together.py  Python Presentation.pptx  README.md  Verify.ipynb  all.py  backup.sh  diagram.py  linear_regression_with_significance.xlsx  participants_with_changes saved.xlsx  participants_with_changes.xlsx  participants_with_changes_test.xlsx  project.ipynb  pyproject.toml  requirements.txt  tes.py  url.txt  ~$Python Presentation.pptx  ~$participants_with_changes.xlsx
docs/: Analysis.html  DataPipe.html  search.js
src/: 1. MRI Pipeline.ipynb  2. Data Analysis.ipynb  Analysis.ipynb  Analysis.py  Data Analysis.ipynb  Data Analysis.py  Data.py  DataPipe.html  DataPipe.ipynb  DataPipe.py  Subject.py  diagram.py  linear_regression_with_significance.xlsx  main.py  participants_with_changes.xlsx
tests/: test_DataPipe.py
