[project]
name = "research"
version = "1.0"
description = "MRI Data Processing"
authors = [
    {name = "Mayer"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alabaster (>=1.0.0,<2.0.0)",
    "antspyx (>=0.5.4,<0.6.0)",
    "appnope (>=0.1.4,<0.2.0)",
    "asgiref (>=3.8.1,<4.0.0)",
    "asttokens (>=3.0.0,<4.0.0)",
    "autodoc (>=0.5.0,<0.6.0)",
    "beautifulsoup4 (>=4.13.1,<5.0.0)",
    "charset-normalizer (>=3.4.1,<4.0.0)",
    "comm (>=0.2.2,<0.3.0)",
    "contourpy (>=1.3.1,<2.0.0)",
    "cycler (>=0.12.1,<0.13.0)",
    "debugpy (>=1.8.12,<2.0.0)",
    "decorator (>=5.1.1,<6.0.0)",
    "distlib (>=0.3.9,<0.4.0)",
    "django (>=5.1.5,<6.0.0)",
    "docutils (>=0.21.2,<0.22.0)",
    "dulwich (>=0.22.7,<0.23.0)",
    "et-xmlfile (>=2.0.0,<3.0.0)",
    "executing (>=2.2.0,<3.0.0)",
    "fastjsonschema (>=2.21.1,<3.0.0)",
    "filelock (>=3.17.0,<4.0.0)",
    "fonttools (>=4.55.8,<5.0.0)",
    "gevent (>=24.11.1,<25.0.0)",
    "graphviz (>=0.20.3,<0.21.0)",
    "greenlet (>=3.1.1,<4.0.0)",
    "idna (>=3.10,<4.0)",
    "imagesize (>=1.4.1,<2.0.0)",
    "iniconfig (>=2.0.0,<3.0.0)",
    "installer (>=0.7.0,<0.8.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "ipython (>=8.32.0,<9.0.0)",
    "jaraco-classes (>=3.4.0,<4.0.0)",
    "jaraco-context (>=6.0.1,<7.0.0)",
    "jaraco-functools (>=4.1.0,<5.0.0)",
    "jedi (>=0.19.2,<0.20.0)",
    "jinja2 (>=3.1.5,<4.0.0)",
    "joblib (>=1.4.2,<2.0.0)",
    "jupyter-client (>=8.6.3,<9.0.0)",
    "jupyter-core (>=5.7.2,<6.0.0)",
    "keyring (>=25.6.0,<26.0.0)",
    "kiwisolver (>=1.4.8,<2.0.0)",
    "lxml (>=5.3.0,<6.0.0)",
    "markupsafe (>=3.0.2,<4.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "matplotlib-inline (>=0.1.7,<0.2.0)",
    "more-itertools (>=10.6.0,<11.0.0)",
    "msgpack (>=1.1.0,<2.0.0)",
    "nest-asyncio (>=1.6.0,<2.0.0)",
    "nibabel (>=5.3.2,<6.0.0)",
    "nilearn (>=0.11.1,<0.12.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "packaging (>=24.2,<25.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "parso (>=0.8.4,<0.9.0)",
    "patsy (>=1.0.1,<2.0.0)",
    "pdoc (>=15.0.1,<16.0.0)",
    "pexpect (>=4.9.0,<5.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "pkginfo (>=1.12.0,<2.0.0)",
    "platformdirs (>=4.3.6,<5.0.0)",
    "plotly (>=6.0.0,<7.0.0)",
    "pluggy (>=1.5.0,<2.0.0)",
    "pockets (>=0.9.1,<0.10.0)",
    "prompt-toolkit (>=3.0.50,<4.0.0)",
    "psutil (>=6.1.1,<7.0.0)",
    "ptyprocess (>=0.7.0,<0.8.0)",
    "pure-eval (>=0.2.3,<0.3.0)",
    "pycparser (>=2.22,<3.0)",
    "pygments (>=2.19.1,<3.0.0)",
    "pyparsing (>=3.2.1,<4.0.0)",
    "pyproject-hooks (>=1.2.0,<2.0.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "pytz (>=2025.1,<2026.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "pyzmq (>=26.2.1,<27.0.0)",
    "rapidfuzz (>=3.12.1,<4.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "requests-toolbelt (>=1.0.0,<2.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "scipy (>=1.15.1,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "setuptools (>=75.8.0,<76.0.0)",
    "shellingham (>=1.5.4,<2.0.0)",
    "six (>=1.17.0,<2.0.0)",
    "snowballstemmer (>=2.2.0,<3.0.0)",
    "soupsieve (>=2.6,<3.0)",
    "sphinx (>=8.1.3,<9.0.0)",
    "sphinx-rtd-theme (>=3.0.2,<4.0.0)",
    "sphinxcontrib-applehelp (>=2.0.0,<3.0.0)",
    "sphinxcontrib-devhelp (>=2.0.0,<3.0.0)",
    "sphinxcontrib-htmlhelp (>=2.1.0,<3.0.0)",
    "sphinxcontrib-jquery (>=4.1,<5.0)",
    "sphinxcontrib-jsmath (>=1.0.1,<2.0.0)",
    "sphinxcontrib-napoleon (>=0.7,<0.8)",
    "sphinxcontrib-qthelp (>=2.0.0,<3.0.0)",
    "sphinxcontrib-serializinghtml (>=2.0.0,<3.0.0)",
    "sqlparse (>=0.5.3,<0.6.0)",
    "stack-data (>=0.6.3,<0.7.0)",
    "statsmodels (>=0.14.4,<0.15.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "tenacity (>=9.0.0,<10.0.0)",
    "threadpoolctl (>=3.5.0,<4.0.0)",
    "tomlkit (>=0.13.2,<0.14.0)",
    "tornado (>=6.4.2,<7.0.0)",
    "traitlets (>=5.14.3,<6.0.0)",
    "trove-classifiers (>=2025.1.15.22,<2026.0.0.0)",
    "typing-extensions (>=4.12.2,<5.0.0)",
    "tzdata (>=2025.1,<2026.0)",
    "urllib3 (>=2.3.0,<3.0.0)",
    "virtualenv (>=20.29.1,<21.0.0)",
    "waitress (>=3.0.2,<4.0.0)",
    "wcwidth (>=0.2.13,<0.3.0)",
    "webcolors (>=24.11.1,<25.0.0)",
    "webob (>=1.8.9,<2.0.0)",
    "webtest (>=3.0.4,<4.0.0)",
    "xattr (>=1.1.4,<2.0.0)",
    "xlsxwriter (>=3.2.2,<4.0.0)",
    "zope-event (>=5.0,<6.0)",
    "zope-interface (>=7.2,<8.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
src = ["src"]
extend-exclude = [
    "conf.py",
]
target-version = "py312"
lint.select = ["ALL"]
lint.ignore = [
    "COM812",   # Conflicts with the formatter
    "ISC001",   # Conflicts with the formatter
    "ANN101",   # "missing-type-self"
    "PT001",    # https://github.com/astral-sh/ruff/issues/8796#issuecomment-1825907715
    "PT004",    # https://github.com/astral-sh/ruff/issues/8796#issuecomment-1825907715
    "PT005",    # https://github.com/astral-sh/ruff/issues/8796#issuecomment-1825907715
    "PT023",    # https://github.com/astral-sh/ruff/issues/8796#issuecomment-1825907715
    "D415",     # Docstring can end without ./!
    "D416",     # Docstring Return can end without :
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = [
    "S101", # Use of `assert` detected
    "D103", # Missing docstring in public function
]
"**/__init__.py" = [
    "F401", # Imported but unused
    "F403", # Wildcard imports
    "D104", # No need to doc this file
]
"docs/**" = [
    "INP001",   # Requires __init__.py but docs folder is not a package.
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`(https://github.com/astral-sh/ruff/issues/5434)
keep-runtime-typing = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
disallow_untyped_defs = true # Functions need to be annotated
warn_unused_ignores = true
ignore_missing_imports = true
exclude = [
    "my-project-\\d+", # Ignore temporary folder created by setuptools when building an sdist
    "venv.*/",
    "build/",
    "dist/",
]
